--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-homework-template",
+  "name": "dragdrop-file",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://SSSerg05.github.io/react-homework-template/",
+  "homepage": "https://SSSerg05.github.io/dragdrop-file/",
   "author": "SSerg",
   "dependencies": {
     "@emotion/styled": "^11.11.0",
